--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -50,6 +50,11 @@
 						>Aula 08 - Introdução a arrays, comando for-of e querySelectorAll</a
 					>
 				</li>
+				<li>
+					<a href="javascript-aula9/index.html" class="link"
+						>Aula 09 - Outros comandos e táticas com loop</a
+					>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
