--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -11,64 +11,57 @@
 			Segue a lista de Exercícios de JavaScript
 			<ul>
 				<li>
-					<a href="javascript-aula1/index.html" class="link"
-						>Aula 01 - Tipos de Dados, Expressões e Variáveis</a
-					>
+					<a href="javascript-aula1/index.html" class="link">
+						Aula 01 - Tipos de Dados, Expressões e Variáveis</a>
 				</li>
 				<li>
-					<a href="javascript-aula2/index.html" class="link"
-						>Aula 02 - Fundamentos de objetos e DOM</a
-					>
+					<a href="javascript-aula2/index.html" class="link">
+						Aula 02 - Fundamentos de objetos e DOM</a>
 				</li>
 				<li>
-					<a href="javascript-aula3/index.html" class="link"
-						>Aula 03 - Comando if-else e biblioteca Math</a
-					>
+					<a href="javascript-aula3/index.html" class="link">
+						Aula 03 - Comando if-else e biblioteca Math</a>
 				</li>
 				<li>
-					<a href="javascript-aula4/index.html" class="link"
-						>Aula 04 - Comando switch, mapeamento e Date</a
-					>
+					<a href="javascript-aula4/index.html" class="link">
+						Aula 04 - Comando switch, mapeamento e Date</a>
 				</li>
 				<li>
-					<a href="javascript-aula5/index.html" class="link"
-						>Aula 05 - Manipulação avançada de eventos</a
-					>
+					<a href="javascript-aula5/index.html" class="link">
+						Aula 05 - Manipulação avançada de eventos</a>
 				</li>
 				<li>
-					<a href="javascript-aula6/index.html" class="link"
-						>Aula 06 - DOM avançado, closure e dataset</a
-					>
+					<a href="javascript-aula6/index.html" class="link">
+						Aula 06 - DOM avançado, closure e dataset</a>
 				</li>
 				<li>
-					<a href="javascript-aula7/index.html" class="link"
-						>Aula 07 - Local Storage, JSON e try-catch</a
-					>
+					<a href="javascript-aula7/index.html" class="link">
+						Aula 07 - Local Storage, JSON e try-catch</a>
 				</li>
 				<li>
-					<a href="javascript-aula8/index.html" class="link"
-						>Aula 08 - Introdução a arrays, comando for-of e querySelectorAll</a
-					>
+					<a href="javascript-aula8/index.html" class="link">
+						Aula 08 - Introdução a arrays, comando for-of e
+						querySelectorAll</a>
 				</li>
 				<li>
-					<a href="javascript-aula9/index.html" class="link"
-						>Aula 09 - Outros comandos e táticas com loop</a
-					>
+					<a href="javascript-aula9/index.html" class="link">
+						Aula 09 - Outros comandos e táticas com loop</a>
 				</li>
 				<li>
-					<a href="javascript-aula10/index.html" class="link"
-						>Aula 10 - Métodos funcionais de array</a
-					>
+					<a href="javascript-aula10/index.html" class="link">
+						Aula 10 - Métodos funcionais de array</a>
 				</li>
 				<li>
-					<a href="javascript-aula11/index.html" class="link"
-						>Aula 11 - Subprogramação</a
-					>
+					<a href="javascript-aula11/index.html" class="link">
+						Aula 11 - Subprogramação</a>
 				</li>
 				<li>
-					<a href="javascript-aula12/index.html" class="link"
-						>Aula 12 - Usando Módulos</a
-					>
+					<a href="javascript-aula12/index.html" class="link">
+						Aula 12 - Usando Módulos</a>
+				</li>
+				<li>
+					<a href="javascript-aula13/index.html" class="link">
+						Aula 13 - Controle de tempo e áudio</a>
 				</li>
 			</ul>
 
