--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
 			Entre e fique à vontade!<br />
 			Segue a lista de alguns deles:
 			<ul>
-				<li
-					>Projeto Alpha Ed/Tech
+				<li>Projeto Alpha Ed/Tech
 					<ul>
 						<li>
-							<a href="/exercicios-javascript/" class="link"
-								>Exercícios das Aulas de JavaScript</a
-							>
+							<a href="/exercicios-javascript/" class="link">Exercícios das Aulas de JavaScript</a>
 						</li>
 						<li>
-							<a href="projetolandingpage/index.html" class="link"
-								>Meu primeiro Projeto de Landing Page</a
-							>
+							<a href="projetolandingpage/index.html" class="link">Meu primeiro Projeto de Landing Page</a>
 						</li>
 					</ul>
 				</li>
