--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -71,6 +71,10 @@
 					<a href="javascript-aula15/index.html" class="link">
 						Aula 15 - Requisições Web</a>
 				</li>
+				<li>
+					<a href="javascript-aula16/index.html" class="link">
+						Aula 16 - Promise e async-await</a>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
